v2.4.22
----------------------------------------------------------------------------------------------------
 * For Managed Domain in "manual" mode, the checks if all used ServerName and
   ServerAlias are part of the MDomain now reports a warning instead of an error
   (AH10040) when not all names are present.
   This should resolve #301.

v2.4.21
----------------------------------------------------------------------------------------------------
 * MDChallengeDns01 can now be configured for individual domains.
   Using PR from Jérôme Billiras (@bilhackmac) and adding test case and fixing proper working
 * Fixed a bug found by Jérôme Billiras (@bilhackmac) that caused the challenge
   teardown not being invoked as it should.

v2.4.20
----------------------------------------------------------------------------------------------------
 * Enabling ED25519 support and certificate transparancy information when
   building with libressl v3.5.0 and newer. Thanks to Giovanni Bechis.

v2.4.19
----------------------------------------------------------------------------------------------------
 * restored curl_easy cleanup behaviour from v2.4.14 and refactored
   the use of curl_multi for OCSP requests to work with that. Fixes #293.

v2.4.18
----------------------------------------------------------------------------------------------------
 * New directive `MDStoreLocks` that can be used on cluster setups with
   a shared file system for `MDStoreDir` to order activation of renewed
   certificates when several cluster nodes are restarted at the same time.
   Store locks are not enabled by default.

v2.4.17
----------------------------------------------------------------------------------------------------
 * A bug was fixed that caused very large MDomains with the combined DNS
   names exceeding ~7k to fail, as request bodies would contain partially
   wrong data from uninitialized memory. This would have appeared as
   failure in signing-up/renewing such configurations.